syntax = "proto3";

message ProductReq{
    int32 reqId = 1;
    string userName = 2;
    string productName = 3;
    repeated string address = 4;
}