syntax = "proto3";

message ProductResp{
    int32 reqId = 1;
    int32 respCode = 2;
    string desc = 3;
}